[gd_scene load_steps=2 format=3 uid="uid://dxp0opjgunx6p"]

[ext_resource type="Script" path="res://scripts/ui/settings_menu.gd" id="1_wqkmw"]

[node name="SettingsMenu" type="PanelContainer" node_paths=PackedStringArray("vsync", "fullscreen", "resolution", "animations", "debug", "cbx", "cby", "cbz", "crym", "cdx")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -273.0
offset_top = -273.0
offset_right = 273.0
offset_bottom = 273.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wqkmw")
vsync = NodePath("TabContainer/Video/Vsync")
fullscreen = NodePath("TabContainer/Video/Fullscreen")
resolution = NodePath("TabContainer/Video/Resolution")
animations = NodePath("TabContainer/Game/Animations")
debug = NodePath("TabContainer/Debug")
cbx = NodePath("TabContainer/Debug/CBX")
cby = NodePath("TabContainer/Debug/CBY")
cbz = NodePath("TabContainer/Debug/CBZ")
crym = NodePath("TabContainer/Debug/CRYM")
cdx = NodePath("TabContainer/Debug/CDX")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 2

[node name="Video" type="VBoxContainer" parent="TabContainer"]
layout_mode = 2

[node name="Fullscreen" type="OptionButton" parent="TabContainer/Video"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Resolution" type="OptionButton" parent="TabContainer/Video"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Vsync" type="CheckButton" parent="TabContainer/Video"]
layout_mode = 2
size_flags_horizontal = 0
text = "V-Sync"

[node name="Game" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="Animations" type="CheckButton" parent="TabContainer/Game"]
layout_mode = 2
size_flags_horizontal = 0
text = "Animations"

[node name="Debug" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="CBX" type="SpinBox" parent="TabContainer/Debug"]
layout_mode = 2
step = 0.1
allow_greater = true
allow_lesser = true
update_on_text_changed = true
prefix = "CBX"

[node name="CBY" type="SpinBox" parent="TabContainer/Debug"]
layout_mode = 2
step = 0.1
allow_greater = true
allow_lesser = true
update_on_text_changed = true
prefix = "CBY"

[node name="CBZ" type="SpinBox" parent="TabContainer/Debug"]
layout_mode = 2
step = 0.1
allow_greater = true
allow_lesser = true
update_on_text_changed = true
prefix = "CBZ"

[node name="CRYM" type="SpinBox" parent="TabContainer/Debug"]
layout_mode = 2
step = 0.1
allow_greater = true
allow_lesser = true
update_on_text_changed = true
prefix = "CRYM"

[node name="CDX" type="SpinBox" parent="TabContainer/Debug"]
layout_mode = 2
step = 0.1
allow_greater = true
allow_lesser = true
update_on_text_changed = true
prefix = "CDX"

[node name="BackButton" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
mouse_filter = 1
theme_override_font_sizes/font_size = 31
text = "X"

[connection signal="item_selected" from="TabContainer/Video/Fullscreen" to="." method="_on_fullscreen_item_selected"]
[connection signal="item_selected" from="TabContainer/Video/Resolution" to="." method="_on_resolution_item_selected"]
[connection signal="toggled" from="TabContainer/Video/Vsync" to="." method="_on_vsync_toggled"]
[connection signal="toggled" from="TabContainer/Game/Animations" to="." method="_on_animations_toggled"]
[connection signal="value_changed" from="TabContainer/Debug/CBX" to="." method="_on_cbx_value_changed"]
[connection signal="value_changed" from="TabContainer/Debug/CBY" to="." method="_on_cby_value_changed"]
[connection signal="value_changed" from="TabContainer/Debug/CBZ" to="." method="_on_cbz_value_changed"]
[connection signal="value_changed" from="TabContainer/Debug/CRYM" to="." method="_on_crym_value_changed"]
[connection signal="value_changed" from="TabContainer/Debug/CDX" to="." method="_on_cdx_value_changed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
